[#CODAP-188] Bug fix: Slider thumb in Safari leaves gunk behind when dragging the thumb from right to left
* The slider thumb, when pressed, was adding a drop shadow to help the user know that something had taken place. It turns out that Safari doesn't deal properly with erasing the drop shadow when the element moves. The solution is *not* to use a drop shadow at all, but to add a stroke to the SVG that draws the thumb. We do this no matter the browser and I think it looks better than the somewhat confusing drop shadow.
* We also note that there was no hover tip for the slider thumb. (There is in V2.) Simply adding a `title` doesn't work due to the way React treats svg. We had to make a ThumbIcon component that renders the svg *and* has its own `title`.

--- a/v3/src/components/slider/slider.scss
+++ b/v3/src/components/slider/slider.scss
@@ -32,9 +32,13 @@ $date-slider-component-height: 110px;
       cursor: grab;
 
       &.dragging {
-        filter: drop-shadow(3px 1px 1px #555);
         cursor: grabbing;
       }
+      &.dragging path {
+        stroke: #555;
+        stroke-width: 1px;
+      }
+
     }
     .slider-axis-wrapper {
       position: relative;
